--- a/main/style.css
+++ b/main/style.css
@@ -8,7 +8,7 @@ body{
     padding: 50px 0;
 
 }
-.nav {margin-left: 250px ;
+.nav {margin-left: 280px ;
 
     font-family: "PT Mono", monospace;
     font-weight: 400;
@@ -107,4 +107,89 @@ body{
 .homing a{
     text-decoration: none;
     
+}
+
+
+.resume{
+    font-family: "PT Mono", monospace;
+    font-weight: 400;
+    font-style: normal;
+    align-items: center ;
+    text-align: center;
+  position: relative;
+  margin-left: 790px;
+  width: 120px;
+  line-height: 40px;
+  text-align: center;
+  color: #1a1a1a;
+  font-size: 25px;
+  border: 2px solid #9444c5;
+  border-radius: 10px;
+  background: #cf9cff;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+
+.resume::before, .resume::after {
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  right: -10px;
+  bottom: -10px;
+  border: 2px solid #8134c0;
+  transition: all 0.5s;
+  -webkit-animation: clippath 3s infinite linear;
+          animation: clippath 3s infinite linear;
+  border-radius: 10px;
+}
+.resume::after {
+  -webkit-animation: clippath 3s infinite -1.5s linear;
+          animation: clippath 3s infinite -1.5s linear;
+}
+
+@-webkit-keyframes clippath {
+  0%, 100% {
+    -webkit-clip-path: inset(0 0 98% 0);
+            clip-path: inset(0 0 98% 0);
+  }
+  25% {
+    -webkit-clip-path: inset(0 98% 0 0);
+            clip-path: inset(0 98% 0 0);
+  }
+  50% {
+    -webkit-clip-path: inset(98% 0 0 0);
+            clip-path: inset(98% 0 0 0);
+  }
+  75% {
+    -webkit-clip-path: inset(0 0 0 98%);
+            clip-path: inset(0 0 0 98%);
+  }
+}
+
+@keyframes clippath {
+  0%, 100% {
+    -webkit-clip-path: inset(0 0 98% 0);
+            clip-path: inset(0 0 98% 0);
+  }
+  25% {
+    -webkit-clip-path: inset(0 98% 0 0);
+            clip-path: inset(0 98% 0 0);
+  }
+  50% {
+    -webkit-clip-path: inset(98% 0 0 0);
+            clip-path: inset(98% 0 0 0);
+  }
+  75% {
+    -webkit-clip-path: inset(0 0 0 98%);
+            clip-path: inset(0 0 0 98%);
+  }
+}
+.resume a{
+    color: black;
+    text-decoration: none;
+}
+
+.resimg{
+    margin-left: 480px;
 }
